# friendli-ocaml

./: .env.example  .gitignore  README.md  dune-project  friendli-dev.opam  friendli-dev.opam.locked  friendli.opam  friendli.opam.locked  friendli.opam.template  tool.json  wttr.opam
lib/: dune  entity.ml  friendli.ml  wttr.ml
test/: dune
